# backups_cleaner

./: Cargo.toml  README.md
src/lib/: backup_file_meta.rs  lib.rs  pruning_strategy.rs  storage_client.rs
src/lib/pruning_strategy/: keep_one_per_month.rs  older_than.rs  older_than_but_keep_history.rs
src/lib/pruning_strategy/keep_one_per_month/: date_time_utilities.rs
src/lib/storage_client/: aws_s3.rs
